fixed some movement on the resume on mobile

--- a/mobile.css
+++ b/mobile.css
@@ -199,6 +199,10 @@ margin-left: 2em;
 padding-right: 1em;
 }
 
+.right_resume {
+    width: 100vw;
+}
+
 .second_left {
     grid-column: 1 / span 2;
 }
